--- a/package.json
+++ b/package.json
@@ -106,14 +106,21 @@
     "webpack-cli": "^4.7.0"
   },
   "dependencies": {
+    "@google-cloud/dialogflow": "^4.5.0",
+    "actions-on-google": "^3.0.0",
     "atob": "^2.1.2",
     "axios": "^0.21.4",
     "boxen": "^5.1.1",
     "catch-exit": "^1.1.0",
     "chalk": "^4.0.0",
     "chrome-launcher": "^0.14.0",
+    "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-validator": "^6.13.0",
     "futoin-hkdf": "^1.4.2",
+    "http": "0.0.1-security",
     "latest-version": "^5.1.0",
     "mime-types": "^2.1.33",
     "ora": "^5.4.1",
@@ -121,10 +128,14 @@
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
     "qrcode-terminal": "^0.12.0",
+    "require.js": "^1.0.0",
     "sanitize-filename": "^1.6.3",
     "sharp": "^0.29.1",
+    "socket.io": "^4.3.2",
     "spinnies": "^0.5.1",
     "tree-kill": "^1.2.2",
+    "util": "^0.12.4",
+    "venom-bot": "latest",
     "winston": "^3.3.3",
     "yoo-hoo": "^1.2.0"
   },
